k8s/overlays/master/06-requestauthentication-patch.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ms-generales-vehiculos-pesados-cotizador-ra
  namespace: ms-cs-eks-generales-vehiculos-pesados
spec:
  jwtRules:
    - issuer: https://sso.consorcio.cl/auth/realms/CRM
      jwksUri: https://sso.consorcio.cl/auth/realms/CRM/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: https://sso.consorcio.cl/auth/realms/SsoConsorcioServicios
      jwksUri: https://sso.consorcio.cl/auth/realms/SsoConsorcioServicios/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: https://sso.cnsv.cl/auth/realms/CRM
      jwksUri: https://sso.cnsv.cl/auth/realms/CRM/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: https://sso.cnsv.cl/auth/realms/SsoConsorcioServicios
      jwksUri: https://sso.cnsv.cl/auth/realms/SsoConsorcioServicios/protocol/openid-connect/certs
      forwardOriginalToken: true
  selector:
    matchLabels:
      app: ms-generales-vehiculos-pesados-cotizador
