k8s/overlays/master/05-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-generales-vehiculos-pesados-cotizador-deployment
  namespace: ms-cs-eks-generales-vehiculos-pesados
  labels:
    app: ms-generales-vehiculos-pesados-cotizador
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-generales-vehiculos-pesados-cotizador
  template:
    metadata:
      labels:
        app: ms-generales-vehiculos-pesados-cotizador
    spec:
      containers:
      - name: ms-generales-vehiculos-pesados-cotizador-container
        image: 250412402401.dkr.ecr.us-east-1.amazonaws.com
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.2"
          limits:
            memory: "512Mi"
            cpu: "0.5"
